fix overflow of body

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  margin: 0;
   display: flex;
 
   flex-direction: column;
